--- a/docs/docs/classic-ml/tracking/index.mdx
+++ b/docs/docs/classic-ml/tracking/index.mdx
@@ -8,6 +8,7 @@ import { PageCard, CardGroup } from "@site/src/components/Card";
 import { APILink } from "@site/src/components/APILink";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
+import { Table } from "@site/src/components/Table";
 
 # MLflow Tracking
 
@@ -311,7 +312,7 @@ The following diagram and table show a few common setups for the MLflow Tracking
 
 ![](/images/tracking/tracking-setup-overview.png)
 
-<table>
+<Table>
   <thead>
     <tr>
       <th></th>
@@ -340,7 +341,7 @@ The following diagram and table show a few common setups for the MLflow Tracking
       <td>[Remote Experiment Tracking with MLflow Tracking Server](/ml/tracking/tutorials/remote-server)</td>
     </tr>
   </tbody>
-</table>
+</Table>
 
 ## Other Configuration with [MLflow Tracking Server](#tracking_server) \{#other-tracking-setup}
 
