--- a/docs/docs/classic-ml/tracking/tracking-api/index.mdx
+++ b/docs/docs/classic-ml/tracking/tracking-api/index.mdx
@@ -2,6 +2,7 @@ import Link from "@docusaurus/Link";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 import { APILink } from "@site/src/components/APILink";
+import { Table } from "@site/src/components/Table";
 
 # MLflow Tracking APIs
 
@@ -136,7 +137,7 @@ Ideal for custom training loops, advanced experimentation, or when you need prec
 
 ### Language-Specific API Coverage
 
-<table>
+<Table>
   <thead>
     <tr>
       <th>Capability</th>
@@ -183,7 +184,7 @@ Ideal for custom training loops, advanced experimentation, or when you need prec
       <td>✅ Full</td>
     </tr>
   </tbody>
-</table>
+</Table>
 
 :::note api-parity
 The Python API provides the most comprehensive feature set. Java and R APIs offer core functionality with ongoing feature additions in each release.
