--- a/docs/docs/llms/transformers/large-models/index.mdx
+++ b/docs/docs/llms/transformers/large-models/index.mdx
@@ -4,6 +4,7 @@ sidebar_label: Storage Optimization
 ---
 
 import { APILink } from "@site/src/components/APILink";
+import { Table } from "@site/src/components/Table";
 
 # Working with Large Models in MLflow Transformers flavor
 
@@ -18,7 +19,7 @@ due to their size and memory requirements. This guide outlines MLflow's features
 
 The following table summarizes the different methods for logging models with the Transformers flavor. Please be aware that each method has certain limitations and requirements, as described in the following sections.
 
-<table>
+<Table>
   <thead>
     <tr>
       <th>Save method</th>
@@ -99,7 +100,7 @@ The following table summarizes the different methods for logging models with the
     </tr>
 
   </tbody>
-</table>
+</Table>
 
 ## Memory-Efficient Model Logging \{#transformers-memory-efficient-logging}
 
