--- a/docs/docs/plugins/index.mdx
+++ b/docs/docs/plugins/index.mdx
@@ -4,6 +4,7 @@ sidebar_position: 17
 
 import Link from "@docusaurus/Link";
 import { APILink } from "@site/src/components/APILink";
+import { Table } from "@site/src/components/Table";
 
 # MLflow Plugins
 
@@ -158,7 +159,7 @@ The type of plugin defined by each entry point and its corresponding reference i
 MLflow are described below. You can work from the reference implementations when writing your own
 plugin:
 
-<table>
+<Table>
   <thead>
     <tr>
       <th>**Description**</th>
@@ -309,7 +310,7 @@ plugin:
     </tr>
 
   </tbody>
-</table>
+</Table>
 
 ### Testing Your Plugin
 
