--- a/docs/docs/quickstart_drilldown/index.mdx
+++ b/docs/docs/quickstart_drilldown/index.mdx
@@ -4,6 +4,7 @@ displayed_sidebar: docsSidebar
 ---
 
 import Link from "@docusaurus/Link";
+import { Table } from "@site/src/components/Table";
 
 # Quickstart options and troubleshooting
 
@@ -16,7 +17,7 @@ avoiding that so as not to create a bunch of super-skinny pages. **/}
 
 Rather than the default MLflow library, you can install the following variations:
 
-<table>
+<Table>
   <thead>
     <tr>
       <th>**Name**</th>
@@ -41,7 +42,7 @@ Rather than the default MLflow library, you can install the following variations
       <td>This is the latest version of MLflow, which may be useful for getting hot-fixes or new features.</td>
     </tr>
   </tbody>
-</table>
+</Table>
 
 ### Python and Mac OS X
 
