--- a/docs/docs/llms/chat-model-guide/index.mdx
+++ b/docs/docs/llms/chat-model-guide/index.mdx
@@ -1,6 +1,7 @@
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 import { APILink } from "@site/src/components/APILink";
+import { Table } from "@site/src/components/Table";
 
 # Tutorial: Custom GenAI Models using ChatModel
 
@@ -20,7 +21,7 @@ When building GenAI applications in MLflow, it's essential to choose the right m
 customization you need. MLflow offers two primary classes for this purpose: <APILink fn="mlflow.pyfunc.ChatModel">`mlflow.pyfunc.ChatModel`</APILink>
 and <APILink fn="mlflow.pyfunc.PythonModel">`mlflow.pyfunc.PythonModel`</APILink>. Each has its own strengths and trade-offs, making it crucial to understand which one best suits your use case.
 
-<table>
+<Table>
   <thead>
     <tr>
       <th></th>
@@ -50,7 +51,7 @@ and <APILink fn="mlflow.pyfunc.PythonModel">`mlflow.pyfunc.PythonModel`</APILink
       <td>**High**. Deploying and integrating the custom PythonModel may not be straightforward. E.g., The model needs to handle Pandas DataFrames as MLflow converts input data to DataFrames before passing it to PythonModel.</td>
     </tr>
   </tbody>
-</table>
+</Table>
 
 ## Purpose of this tutorial
 
